...
            placeholder="seu@email.com"
            keyboardType="email-address"
            autoCapitalize="none"
          />

          <Input
            label="Senha"
            value={password}
            onChangeText={setPassword}
            placeholder="••••••••"
            secureTextEntry
          />

          <Button
            label="Entrar"
            onPress={handleLogin}
            isLoading={loading}
            className="mt-3"
            size="lg"
          />

...
