...
                >
                  <Text className="text-zinc-300 text-xs font-bold">{suggestion.name}</Text>
                </TouchableOpacity>
              ))}
            </ScrollView>

            <Text className="text-zinc-400 text-sm font-bold mb-2 ml-1">Nome</Text>
            <TextInput
              className="bg-background-primary text-white p-4 rounded-xl border border-zinc-800 mb-4"
              placeholder="Ex: Lanche da Manhã"
              placeholderTextColor="#52525B"
              value={mealName}
              onChangeText={setMealName}
...
              </TouchableOpacity>
              <TouchableOpacity
                className="flex-1 p-4 rounded-xl items-center"
                style={{ backgroundColor: brandColors.primary.start }}
                onPress={handleSaveMeal}
              >
                <Text className="text-white font-bold">Salvar</Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </Modal>

...
